2010-02-04  Scott James Remnant  <scott@netsplit.com>

	* init/job_process.c (job_process_handler): Reduce priority of the
	stopped/continued by signal messages to informational.

2010-02-03  Scott James Remnant  <scott@netsplit.com>

	* util/shutdown.c (shutdown_now): Free error before exiting.

2010-02-03  Johan Kiviniemi  <johan@kiviniemi.name>

	* conf/rc-sysinit.conf: Don't replace DEFAULT_RUNLEVEL with an
	empty string when there is no "initdefault" line in /etc/inittab

2010-02-03  Scott James Remnant  <scott@netsplit.com>

	Update code to work with libnih 1.0.1

	* init/tests/test_event.c (test_new): Replace TEST_ALLOC_ORPHAN(env)
	with TEST_ALLOC_PARENT(env, NULL); discard environment after creating
	event from it
	* init/tests/test_event_operator.c (test_operator_new): Replace
	TEST_ALLOC_ORPHAN(env) with TEST_ALLOC_PARENT(env, NULL); discard
	environment after creating event from it
	* init/tests/test_control.c (test_emit_event): Discard event
	environment after emission
	* init/init.supp: Add nih_alloc_ref_new() to init functions

	libnih is now released as its own project, so rather than expecting
	to include it with the source we depend on it being outside of it.

	* Makefile.am (SUBDIRS): Remove m4 directory along with the nih bits.
	(EXTRA_DIST): Remove ChangeLog.nih
	* configure.ac (AM_INIT_AUTOMAKE): Remove dist-bzip2, since we don't
	actually use it; add color-tests and silent-rules.
	(AM_SILENT_RULES): Use silent rules by default
	(AM_MAINTAINER_MODE): Enable maintainer mode by default (as before),
	but allow it to be disabled
	(AM_GNU_GETTEXT_VERSION): Bump to 0.17
	(NIH_INIT): Replace with the expanded out calls that we actually need.
	(AC_CONFIG_FILES): Remove nih directories
	Add magic to allow use of a local libnih source tree.
	* init/Makefile.am (AM_CFLAGS): Add NIH_CFLAGS and NIH_DBUS_CFLAGS
	(init_LDADD, test_system_LDADD, test_environ_LDADD, test_process_LDADD)
	(test_job_class_LDADD, test_job_process_LDADD, test_job_LDADD)